# autoclicker

./: .gitignore  README.md  app.py  autoclicker.spec  main.py  pyproject.toml  requirements.txt  task.md  telegram.txt
app/: __init__.py  __version__.py  bootstrap.py  branding.py  presenter.py  single_instance.py
app/core/: __init__.py  autoclicker.py  bind_validator.py  clicker_facade.py  event_bus.py  input_engine.py  key_tokens.py  macro_engine.py  sequence_autoclicker.py  state.py
app/i18n/: __init__.py  en.json  ru.json  uk.json
app/models/: __init__.py  autoclick_sequence.py  bindings.py  macro.py  recording_profile.py  settings.py
app/services/: __init__.py  config_repository.py  hotkey_manager.py  hotkey_service.py  log_service.py  logging_service.py  settings_store.py  sound_service.py  tray_service.py  update_service.py  win_hotkey_service.py
app/ui/: app_icons.py  chevron_controls.py  design_tokens.py  keyboard_layout_win.py  keyboard_test_hooks.py  keyboard_test_ui.py  keyboard_vk_map.py  main_window.py  overlay_widget.py  theme.py  themed_checkbox.py
app/utils/: app_icon.py  json_io.py  paths.py  timing.py
config/: binds.example.json  binds.json  clicker.example.json  clicker.json  macros.example.json  macros.json  plugin.json  settings.example.json  settings.json.bak
data/macros/: 222.json  example_macro.json
scripts/: build_exe.ps1  rebuild_favicon_ico.py
tests/: test_autoclicker.py  test_bind_validator.py  test_clicker_facade.py  test_config_repository.py  test_event_bus.py  test_json_io.py  test_macro_model.py  test_update_service.py
(+2 files in other folders)
