[project]
name = "autoclicker"
version = "0.1.0"
description = "Desktop autoclicker and macro manager for Windows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8.0",
    "pynput>=1.7.7",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.10.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
